# opengl-sample-project

./: .gitignore  CMakeLists.txt  README.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  hello_window.cpp  main.cpp
src/1_getting_started/: CMakeLists.txt  hello_window.cpp
